hid scrollbars on trip show and stop show

--- a/app/assets/stylesheets/components/_stop_show.scss
+++ b/app/assets/stylesheets/components/_stop_show.scss
@@ -23,3 +23,11 @@
     grid-row: span 4;
     background-color: $info;
   }
+
+  #activities-list {
+    overflow-y: scroll;
+  }
+
+  #activities-list::-webkit-scrollbar {
+    display: none;
+  }
